@@ -215,7 +215,6 @@ variable in <EM>slashdotrc.pl</EM>). Also, on all of our test systems, some of t
         public_html/topics.pl
         public_html/users.pl
         public_html/404.pl
-        public_html/imagesize.pm
 </PRE>
 <P>
 You can get the Slash code in these locations:
